--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,10 @@
+/*全体に対するCSSデザイン*/
+
 @import "tailwindcss";
 
+/*
 @theme {
   --font-sans: var(--font-geist-sans), ui-sans-serif, system-ui, sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
+*/
